# ChangeLog for dev-perl/Lirc-Client
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lirc-Client/ChangeLog,v 1.8 2012/06/24 12:59:45 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  29 Mar 2012; Samuli Suominen <ssuominen@gentoo.org>
  Lirc-Client-1.540.0.ebuild:
  Keyword ~x86 wrt #407789

  29 Mar 2012; Agostino Sarubbo <ago@gentoo.org> Lirc-Client-1.540.0.ebuild:
  Stable for AMD64, wrt bug #407789

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Lirc-Client-1.51.ebuild:
  Cleanup

*Lirc-Client-1.540.0 (03 Jun 2011)

  03 Jun 2011; Torsten Veller <tove@gentoo.org> +Lirc-Client-1.540.0.ebuild:
  Version bump

  24 Nov 2009; Torsten Veller <tove@gentoo.org> Lirc-Client-1.51.ebuild:
  Depend on Module-Build (#294317)

  01 May 2009; Torsten Veller <tove@gentoo.org> -Lirc-Client-1.50.ebuild:
  Cleanup

*Lirc-Client-1.51 (12 Dec 2008)
*Lirc-Client-1.50 (12 Dec 2008)

  12 Dec 2008; Steve Dibb <beandog@gentoo.org> +metadata.xml,
  +Lirc-Client-1.50.ebuild, +Lirc-Client-1.51.ebuild:
  Initial commit, bug 214297, thanks to Jiri Tyr for original ebuilds