@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lirc-Client/Lirc-Client-1.540.0.ebuild,v 1.3 2012/03/29 17:50:32 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Lirc-Client/Lirc-Client-1.540.0-r1.ebuild,v 1.1 2014/08/24 00:45:08 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=MGRIMES
 MODULE_VERSION=1.54
