@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Lirc-Client-1.54.tar.gz 12870 SHA256 a0b57cd2157539382d41806a6006210fb95e49bf14be07793eca8bf69c7fca8f SHA512 3643b5d9cd097bc88cfe7871db2aac0cc23c549b1cc19992d9882f5cd19cd33fc4a0dc7a4ba87bcd51bca253956650862648f987c6625efdfcc5d23abcf4d561 WHIRLPOOL 35f9c117f14a5ab087f3a9d57f4bf8792a3a7902baf98f87a24dcac4a078a998267786b0b42c18f88a15da64e26ed7f664cb64b2b6d2b417ca97084bde8dda15
-EBUILD Lirc-Client-1.540.0.ebuild 593 SHA256 db839e2fc262d0d2696dc1da5e908a3c12efff1ff740b4c5314dd3b750c5b041 SHA512 c267a4cf275dc39a0a21891bc4a99229712c1898a7c78fe239a604f0b1ef30926c7b95bac21d4060897b111c104111e10438d07eca08df29f0ef8c36b0b0a136 WHIRLPOOL ecc1e85ea01d2bdaeefba71ca0e47b373cd808747ab6a11d013984dface7c402beefc24eda8ad7bddf07809873845a1f003cf358ba182d6a0580fa18a4168fa2
-MISC ChangeLog 1187 SHA256 dc29f6e12ece93b5add87693a8eb80943700e58e13bda2dfc515fa6ef28747cb SHA512 96a6c92b603e16b7271fdfbe12c148970f64fee16563f71f3df23c78dfbb0fbdbee77465cc423abba2f8cac6c41d8809bd6c551faaca485a1644dabbc263e97c WHIRLPOOL 05a6e88cf37edd841c347f9c8514ba19764cefe35ab9794f1dadba3b8f6031a1fb468b69800b8d820d4454c1a35020987303fdaf9d9dde4b1621e8a9bc018553
+EBUILD Lirc-Client-1.540.0-r1.ebuild 590 SHA256 6beb8997d8a4dcd87723fcb2049f498eab112aec99b80d052cdc89d7ed057f1c SHA512 4cc94f3db0e225078d2057bbe203560f0db7bd82832f85acba67ff871df8a45537367c41975665e429086cd8c85586473a1ee81e85ee535a852b9c41a80797d6 WHIRLPOOL 30cd2d61c97046f5a457b07931d463d4a05cc91adb30796069aac579be2b2f88587b12f42edb052242a0f0ee1c6e07b4862f5c7a2a241dd52c1ec4ed8c22431b
+MISC ChangeLog 1499 SHA256 8ea697b8de1b49ac545ec12580f1a8c308f6df2f8b1aa79f49d23062a5ffae66 SHA512 a25c85935c017050371d58b8e58c3bdd330e30359ed33d9892efdd9fd91240fe8da98231ee331c399fb7eddb2e2e6d7f5fb6b0f613fa781173f11b148401d6e4 WHIRLPOOL 16e0f2ea7b63c8af89dabf0730acd7eb35af824a630ca60c7b71a94115201a433bd8ac247d419886acd7badd52ca8a7cb5d585b5932883fdac0ec975b32f62b4
 MISC metadata.xml 320 SHA256 f7938f605c8dd16488a21060e7316c84532614feb2d94b06816867c3802e68eb SHA512 8718f63931ecc242e1fc79e968f5354db85bf97130050ed1367b53ea1eaab6d992f311a49d7a635757b58a94956ed1c64e8acda5b34c36cb5b0dab8b4130b7d4 WHIRLPOOL 1a1d66fc79a3584de0f609e8d6304b277912bd0a5b401a900092bd2fb91b65117c1c19f29295a8a073d74473aafd7ca4246ebe10207c0e37f6cc2f38f4ef227a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP5NZsACgkQ2ugaI38ACPAbXwD/W1FVYsK+ervs1oPudujhw07u
+IKDXTIeKF09k70OijFUA/30eblPcgPWBt5vjDvuC3zTX3D/4zJQtCXW13TZ1Bznt
+=7SxJ
+-----END PGP SIGNATURE-----
