@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/Mail-SPF-2.8.0.ebuild,v 1.9 2013/06/11 18:49:05 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/Mail-SPF-2.8.0-r1.ebuild,v 1.1 2014/08/24 00:46:22 axs Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=JMEHNLE
 MODULE_SECTION=mail-spf
