@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST Mail-SPF-v2.8.0.tar.gz 103604 SHA256 fba3d2ca1639ba9a5d11d40c0bb57490fe83543889246975a2976fe5704f8909 SHA512 af1730d227e7b873073bf5a1311b51a3a6974e737adeed25e70150a1c695bd70b4d63cfe09acf17481357d6ee83dc40fbb6d92215363ec795bee46361a348a3a WHIRLPOOL 6b8f39d949b823737fbab01ef70c91af36cfe7ba075a097aca7327713b91a37810854a48592cd3017a8667365363496f41d5eae575e130dd718e90fc8ffb3331
-EBUILD Mail-SPF-2.8.0.ebuild 1031 SHA256 c74d33e163c45009a49731adf36c72110de22c8c2853d7a37cd6fce89641d373 SHA512 8b80713aa89d8297a9a9173220da6e5c016a4ae1d2417d2d952bb0bc4f21e7bb4b1568897452cb4215002cee375f0fc66f7893ec5f8d02b1f18fdf9ad436dbe3 WHIRLPOOL f220ba3bb43324fa982be04ff99287b3de9c8b8e01c4f71f621709c1cb9b5851c68c9b3d766f2288d1ec7d976f4d698dfee04fbfe5124fdeb46881a78cb346e6
-MISC ChangeLog 4254 SHA256 b6932d884c9f149d18f29f3ebf51c01687b767e0b556c41242200b8800888d05 SHA512 be1b71c7c97db900ea1f09efc86631fb13d6f5059865c5486a68880e68de97f64725df65d9ffcf00b9857413c1add2dad087949153c22b59b3aff335b1c2373a WHIRLPOOL 185b43ed41d2643a6ca2ca2cd670a5affecf020dc1725677e375312cdc2c7dfa70c8d6524b1f1ea5bb2215802e27af15352140e2f356c0bc57878fcd2d290d4a
+EBUILD Mail-SPF-2.8.0-r1.ebuild 1031 SHA256 4ea6510f61868cfe0f98c45fb96d854ac9a0fa9074b78e5357bb6114ed17e0a4 SHA512 7f6d3622459742c1274c5da2b007c4f42da01dc96244e8f872edbd955f73ff79937b28604ddd48e990ea3861f4a025dd9e01aa092607e6a2a23614f066174dfe WHIRLPOOL b52e110742823894d0a43b249da566c7f1508fc8a0c56e9fce2362547389ec2f95bf2a09602850e865f51f8bd5e2cf42c9021ff58c4be235330924bd0c7068be
+MISC ChangeLog 4549 SHA256 2c32275a8e2bc0bf18142ea42421ab67c63a29d3e1f76dd02013d500fd45f325 SHA512 f7c1904194f5c7caa7ae8bf47eac2159f0d550d731620e32996a695468a0a934ae3e02c2edbfe5fcbec24b35952b1abc644a95c380d3d6ddb2df4863b10b92b4 WHIRLPOOL 1a1caa71933bc42c17b167a990cdd3e572fceeed585eb5fa7132764352497ace78ea02bc77ece264f57f6fa9bf254913bc280d235c0cdd8c7414c996e808637b
 MISC metadata.xml 5242 SHA256 936e8d9e530fedbba358348509259f39bf2c08411d8e45900c60dd6b9f9688a2 SHA512 df0946bb6e671c60f7364c3f68409d8baa83a747977bbf65d97b06beb6f5305bcab9417daa44e8bfd5302a294c6e35beade730ed5136c084e3b114e507d4a4d9 WHIRLPOOL 9e60f6933f011c0265e85ae190429e3e5889050d1790f91dc38ff2610fe8c4ceb5c629fa069fd021f8e878aa5afcb5404bf71e7245a6de8dabd6c6cf132cee65
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlG3cnUACgkQkKaRLQcq0GKS7wCghnjd4wOtlRa2rAW1+3A8m1oo
-IygAn1Z1mklNC7MLzzwzQrs0Zxr8BXn1
-=YAr8
+iF4EAREIAAYFAlP5NeMACgkQ2ugaI38ACPCkUAEAmNy/KSufXBi98LpP9g4YIVx9
+1Gs1tExnqMjFfHCvAIQBAKAWsb3HDRGMHX+NASRpvBdZuwCGnBmqyFOjJnhp9jhm
+=+7BK
 -----END PGP SIGNATURE-----
