@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=dev-perl/File-Path-Expand dev-perl/Class-Accessor virtual/perl-Module-Build || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=dev-perl/File-Path-Expand dev-perl/Class-Accessor virtual/perl-Module-Build dev-lang/perl:=[-build(-)]
 DESCRIPTION=A client library for the Linux Infrared Remote Control (LIRC)
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Lirc-Client/
 KEYWORDS=amd64 ~x86
 LICENSE=|| ( Artistic GPL-1 GPL-2 GPL-3 )
-RDEPEND=dev-perl/File-Path-Expand dev-perl/Class-Accessor || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=dev-perl/File-Path-Expand dev-perl/Class-Accessor dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/M/MG/MGRIMES/Lirc-Client-1.54.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=aec41188420b947e09ab3e893b467c37
+_md5_=1edc24e7ef542d35ff551b13d9776b80
