@@ -1,12 +1,12 @@
 DEFINED_PHASES=compile configure install postinst prepare test unpack
-DEPEND=dev-perl/Error dev-perl/URI >=dev-perl/Net-DNS-0.65 >=dev-perl/NetAddr-IP-4.026 >=dev-perl/Net-DNS-Resolver-Programmable-0.003 virtual/perl-version !!dev-perl/Mail-SPF-Query >=virtual/perl-Module-Build-0.33 || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+DEPEND=dev-perl/Error dev-perl/URI >=dev-perl/Net-DNS-0.65 >=dev-perl/NetAddr-IP-4.026 >=dev-perl/Net-DNS-Resolver-Programmable-0.003 virtual/perl-version !!dev-perl/Mail-SPF-Query >=virtual/perl-Module-Build-0.33 dev-lang/perl:=[-build(-)]
 DESCRIPTION=Sender Permitted From - Object Oriented
-EAPI=4
+EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/Mail-SPF/
 KEYWORDS=alpha amd64 arm hppa ia64 ppc ppc64 s390 sparc x86 ~x86-fbsd
 LICENSE=BSD
-RDEPEND=dev-perl/Error dev-perl/URI >=dev-perl/Net-DNS-0.65 >=dev-perl/NetAddr-IP-4.026 >=dev-perl/Net-DNS-Resolver-Programmable-0.003 virtual/perl-version !!dev-perl/Mail-SPF-Query || ( >=dev-lang/perl-5.16 <dev-lang/perl-5.16[-build] )
+RDEPEND=dev-perl/Error dev-perl/URI >=dev-perl/Net-DNS-0.65 >=dev-perl/NetAddr-IP-4.026 >=dev-perl/Net-DNS-Resolver-Programmable-0.003 virtual/perl-version !!dev-perl/Mail-SPF-Query dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/J/JM/JMEHNLE/mail-spf/Mail-SPF-v2.8.0.tar.gz
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	a6a2d5c77bdaeba2794b167689cafb7a	toolchain-funcs	0f1760274637a138b99bb649202ea402	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=2a1869f8fd6748044cc2739abe1d4241
+_md5_=e72d31077388f2c5057fe4d0578d440e
