@@ -1,6 +1,13 @@
 # ChangeLog for dev-perl/Mail-SPF
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/ChangeLog,v 1.35 2013/06/11 18:49:04 maekke Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Mail-SPF/ChangeLog,v 1.36 2014/08/24 00:46:22 axs Exp $
+
+*Mail-SPF-2.8.0-r1 (24 Aug 2014)
+
+  24 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
+  +Mail-SPF-2.8.0-r1.ebuild, -Mail-SPF-2.8.0.ebuild:
+  bumped EAPI to 5; committed directly to stable as no other changes present and
+  revbump helps stable systems to keep from dieing on perl-5.18 upgrade
 
   11 Jun 2013; Markus Meier <maekke@gentoo.org> Mail-SPF-2.8.0.ebuild:
   arm stable, bug #269129
